--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ body {
 
 .sign-up-banner button{
     width: 100px;
+    height: 45px;
     padding: 10px 0px;
     text-align: center;
     font-size: 16px;
@@ -170,7 +171,7 @@ body {
     color: white;
     border-radius: 10px;
     border-color: #ccc;
-    flex: 1 0 auto;
+    flex: 0 0 auto;
 }
 
 .Copyright {
